--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,11 +1,12 @@
 spring:
   profiles:
-    active: local
+    active: test
   datasource:
     url: jdbc:h2:tcp://localhost/~/querydsl
     username: sa
     password:
     driver-class-name: org.h2.Driver
+
 
   jpa:
     hibernate:
